Project1-StaticWebApache-EC2-CloudFormation/CloudFormationTemp_Pr1.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation Template EC2InstanceWithSecurityGroupSample for Clarusway with Apache, 
  AWS Linux2 and EC2 Name Tag that should be as a "Web Server of StackName".
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
    ConstraintDescription: must be a valid EC2 instance type.

  ImageId:
    Description: Image ID
    Type: String
    Default: ami-08f3d892de259504d

Resources:
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref InstanceType
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: !Ref KeyName
      ImageId: !Ref ImageId
      Tags:
        - Key: Name
          Value: !Sub 'Web Server of ${AWS::StackName}'
      UserData:
        'Fn::Base64': !Sub |
          #!/bin/bash
          yum update -y
          yum install httpd -y
          chmod -R 777 /var/www/html
          cd /var/www/html
          wget https://raw.githubusercontent.com/ituncel/DevOpsProjects/master/Project1-StaticWebApache-EC2-CloudFormation/static-web/cat0.jpg
          wget https://raw.githubusercontent.com/ituncel/DevOpsProjects/master/Project1-StaticWebApache-EC2-CloudFormation/static-web/cat1.jpg
          wget https://raw.githubusercontent.com/ituncel/DevOpsProjects/master/Project1-StaticWebApache-EC2-CloudFormation/static-web/cat2.jpg
          wget https://raw.githubusercontent.com/ituncel/DevOpsProjects/master/Project1-StaticWebApache-EC2-CloudFormation/static-web/index.html
          systemctl start httpd
          systemctl enable httpd
           
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22 and access to port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref EC2Instance
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt 
      - EC2Instance
      - PublicDnsName
